[package]
name = "ignition-config"
repository = "https://github.com/coreos/ignition-config-rs"
license = "Apache-2.0"
edition = "2018"
exclude = ["/.github", "/.gitignore"]
authors = [ "Benjamin Gilbert <bgilbert@redhat.com>" ]
description = "Data structures for reading/writing Ignition configs"
version = "0.0.2-alpha.0"

[package.metadata.release]
sign-commit = true
sign-tag = true
disable-push = true
disable-publish = true
pre-release-commit-message = "cargo: ignition-config release {{version}}"
post-release-commit-message = "cargo: development version bump"
tag-message = "ignition-config v{{version}}"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
anyhow = "1.0"
schemafy_lib = { git = "https://github.com/Marwes/schemafy", optional = true }
tempfile = { version = "3.2.0", optional = true }

[features]
regenerate = ["schemafy_lib", "tempfile"]
