[package]
name = "ignition-config"
repository = "https://github.com/coreos/ignition-config-rs"
license = "Apache-2.0"
edition = "2018"
rust-version = "1.56.0"
exclude = ["/.github", "/.gitignore"]
authors = [ "Benjamin Gilbert <bgilbert@redhat.com>" ]
description = "Data structures for reading/writing Ignition configs"
version = "0.2.0"

[package.metadata.release]
sign-commit = true
sign-tag = true
push = false
publish = false
pre-release-commit-message = "cargo: ignition-config release {{version}}"
tag-message = "ignition-config v{{version}}"

[dependencies]
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_ignored = "0.1"
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
anyhow = "1.0"
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
schemafy_lib = { version = "0.6.0", optional = true }
syn = { version = "1.0", features = ["full", "parsing", "visit-mut"], optional = true }
tempfile = { version = "3.2.0", optional = true }

[features]
regenerate = ["proc-macro2", "quote", "schemafy_lib", "syn", "tempfile"]
